# noen

./: .editorconfig  README.md  启动 EtherCAT 驱动并把伺服切到 CST 模式.md  回答.md
SOEM/: CMakeLists.txt
SOEM/soem/: ethercatcoe.c  ethercatconfig.c
arm_controllers/: .clang-format  CMakeLists.txt  controller_plugins.xml  package.xml
arm_controllers/src/: passivity_controller.cpp
arm_controllers/src/myprogram/: ANN_plot.py  correct_velocityfield_20250715-v1.cpp  lowpass_to_filter.py  newparam_regulating20250721-v1.cpp  nnno_joint04_gravitycomp_virtualwall_20250712-v1.cpp  nnnoclear20250710-v3.cpp  nnnodelete_kdl_20250710-v2.cpp  nnnosimple_test_20250710-v1.cpp  nnnoupdate20250710-v4.cpp  noooadmittance_test20250714-v2.cpp  noooadmittance_test20250720-v1.cpp  oook_withoutput_2025050711-v1.cpp  ooook20250712-v2.cpp  ooookpassi_param_regulating20250713-v2.cpp  passivity_velocityfield20250713-v1.cpp  plot.py  simple_test.cpp  simple_test_20250709-v1.cpp  sint_torque_control.cpp  to_init_pose.cpp
arm_controllers/src/myprogram/ANN/: ANN_ad_controller20250719-v1.cpp  ANN_ad_controller20250719-v2.cpp  ann_data.csv  nooooANN20250718-v1.cpp
arm_controllers/src/myprogram/EXP-PONITSMC/: nooooEXP20250718-v1.cpp
arm_controllers/src/myprogram/fixed_param/: admittance_controller_20250718-v5.cpp  admittance_controller_fixgains20250718-v4.cpp  correct_velocityfield_passivity20250715-v2.cpp  fixed_param_controller20250718-v1.cpp  fixedgains_ad_data.csv  passivity_controller20250718-v2.cpp  passivity_controller_fixgains20250718-v3.cpp
arm_controllers/src/myprogram/integral_sliding_mode_control/: integral_sliding_mode_ad_control20250718-v6.cpp  intergral_sliding_mode_control_data.csv
elfin3_velocity_ctrl/: CMakeLists.txt  controller_plugins.xml  package.xml
elfin3_velocity_ctrl/src/: elfin3_pos_controller.cpp  elfin3_posvel_controller.cpp  elfin3_vel_controller copy.cpp  elfin3_vel_controller.cpp  (+1 more)
elfin_description_github/: CMakeLists.txt  package.xml
elfin_ethercat_driver/: CMakeLists.txt
elfin_kinematic_solver/: CMakeLists.txt
elfin_robot_servo/: package.xml
ftdata/: CMakeLists.txt  package.xml
(+60 files in other folders)
